# farmworld-online

./: .gitignore  AGENTS.md  icon.svg.import  project.godot  readme.md
assets/YouTube Action RPG Resources/effects/: enemy_death_effect.png.import  grass_effect.png.import  hit_effect.png.import
assets/YouTube Action RPG Resources/enemies/: bat.png.import
assets/YouTube Action RPG Resources/music_and_sounds/: enemy_die.wav.import  evade.wav.import  hit.wav.import  hurt.wav.import  menu_move.wav.import  menu_select.wav.import  music.mp3.import  pause.wav.import  swipe.wav.import  unpause.wav.import
assets/YouTube Action RPG Resources/player/: player.png.import
assets/YouTube Action RPG Resources/shadows/: large_shadow.png.import  medium_shadow.png.import  small_shadow.png.import
assets/YouTube Action RPG Resources/ui/: heart_ui_empty.png.import  heart_ui_full.png.import
assets/audio/: On the Farm.wav.import
exports/web/: index.apple-touch-icon.png.import  index.html  index.icon.png.import  index.png.import
farmworld-online-server/: Cargo.toml
farmworld-online-server/src/: lib.rs  main.rs  messages.rs  net.rs  sim.rs
farmworld-online-server/tests/: integration_tests.rs
scenes/test/: bush.tscn  game_manager.gd  game_manager.gd.uid  main_menu.gd  main_menu.gd.uid  main_menu.tscn  other_player.gd  other_player.gd.uid  other_player.tscn  player.gd  player.gd.uid  player.tscn  player_manager.gd  player_manager.gd.uid  test_scene_tilemap.tscn  test_world.tscn
scripts/: game_config.gd  game_config.gd.uid
tilesets/: game_tile_set.tres
(+84 files in other folders)
