[package]
name = "farmworld-online-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
uuid = "1.18.1"
